--- a/src/components/ScreenTwo/screen-two.css
+++ b/src/components/ScreenTwo/screen-two.css
@@ -15,9 +15,7 @@
      font-size: 0.9rem; /* Smaller text for mobile */
    }
  
-   .main-container-se {
-     padding: 10px; /* Reduce padding for mobile */
-   }
+  
  
    .topdiv {
      height: 8%; /* Adjust the height for smaller screens */
